# ArduinoJson

./: .gitignore  ArduinoJson.h  CMakeLists.txt  library.json
include/ArduinoJson/: JsonVariant.hpp  StaticJsonBuffer.hpp
include/ArduinoJson/Arduino/: Print.hpp
scripts/: buildzip
src/: JsonVariant.cpp
test/: Nightscout.cpp
